// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show the summary of multiple expenses in the list 1`] = `
<div>
  <h3>
    Viewing 
    10
     
    expenses
     totalling 
    $150.00
  </h3>
</div>
`;

exports[`should show the summary of one item in the list 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $10.02
  </h3>
</div>
`;
